@@ -15,7 +15,7 @@ package org.eclipse.ditto.services.connectivity.mapping;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.Map;
 
 import org.assertj.core.api.Assertions;
 import org.eclipse.ditto.json.JsonFactory;
@@ -103,6 +103,7 @@ public final class NormalizedMessageMapperTest {
                         "    \"topic\": \"thing/created/things/twin/events/created\",\n" +
                         "    \"path\": \"/\",\n" +
                         "    \"headers\": {\n" +
+                        "      \"response-required\": \"false\",\n" +
                         "      \"content-type\": \"application/vnd.eclipse.ditto+json\"\n" +
                         "    }\n" +
                         "  }\n" +
@@ -118,7 +119,8 @@ public final class NormalizedMessageMapperTest {
                 JsonValue.of(9),
                 2L,
                 Instant.ofEpochSecond(2L),
-                DittoHeaders.empty());
+                DittoHeaders.empty(),
+                null);
 
         final Adaptable adaptable = ADAPTER.toAdaptable(event);
         Assertions.assertThat(mapToJson(adaptable))
@@ -136,6 +138,7 @@ public final class NormalizedMessageMapperTest {
                         "    \"topic\": \"thing/id/things/twin/events/modified\",\n" +
                         "    \"path\": \"/features/featureId/properties/the/quick/brown/fox/jumps/over/the/lazy/dog\",\n" +
                         "    \"headers\": {\n" +
+                        "      \"response-required\": \"false\",\n" +
                         "      \"content-type\": \"application/vnd.eclipse.ditto+json\"\n" +
                         "    }\n" +
                         "  }\n" +
@@ -151,7 +154,8 @@ public final class NormalizedMessageMapperTest {
                 JsonValue.of(9),
                 2L,
                 Instant.ofEpochSecond(2L),
-                DittoHeaders.newBuilder().putHeader("random", "header").build());
+                DittoHeaders.newBuilder().putHeader("random", "header").build(),
+                null);
 
         final Adaptable adaptable = ADAPTER.toAdaptable(event, TopicPath.Channel.TWIN);
         Assertions.assertThat(underTest.map(adaptable).get(0).getHeaders()).isEmpty();
@@ -159,19 +163,20 @@ public final class NormalizedMessageMapperTest {
 
     @Test
     public void withFieldSelection() {
-        final FeaturePropertyModified event = FeaturePropertyModified.of(
+        final Signal<?> event = FeaturePropertyModified.of(
                 ThingId.of("thing:id"),
                 "featureId",
                 JsonPointer.of("/the/quick/brown/fox/jumps/over/the/lazy/dog"),
                 JsonValue.of(9),
                 2L,
                 Instant.ofEpochSecond(2L),
-                DittoHeaders.empty());
+                DittoHeaders.empty(),
+                null);
 
+        final Map<String, JsonValue> options = Map.of(NormalizedMessageMapper.FIELDS, JsonValue.of(
+                "_modified,_context/topic,_context/headers/content-type,nonexistent/json/pointer"));
         underTest.configure(DefaultMappingConfig.of(ConfigFactory.load("mapping-test")),
-                DefaultMessageMapperConfiguration.of("normalizer",
-                        Collections.singletonMap(NormalizedMessageMapper.FIELDS,
-                                "_modified,_context/topic,_context/headers/content-type,nonexistent/json/pointer")));
+                DefaultMessageMapperConfiguration.of("normalizer", options, Map.of(), Map.of()));
 
         final Adaptable adaptable = ADAPTER.toAdaptable(event);
         Assertions.assertThat(mapToJson(adaptable))
@@ -198,11 +203,12 @@ public final class NormalizedMessageMapperTest {
                         .build()))
                 .build(), 1L, Instant.ofEpochSecond(1L), DittoHeaders.empty());
 
+        final Map<String, JsonValue> options = Map.of(NormalizedMessageMapper.FIELDS, JsonValue.of(
+                "thingId,policyId,attributes,features,_modified,_revision,_context(topic,path)," +
+                        "_context/headers/correlation-id"));
         underTest.configure(DefaultMappingConfig.of(ConfigFactory.load("mapping-test")),
                 DefaultMessageMapperConfiguration.of("normalizer",
-                        Collections.singletonMap(NormalizedMessageMapper.FIELDS,
-                                "thingId,policyId,attributes,features,_modified,_revision,_context(topic,path)," +
-                                        "_context/headers/correlation-id")));
+                        options, Map.of(), Map.of()));
 
         final Adaptable adaptable = ADAPTER.toAdaptable(event);
         Assertions.assertThat(mapToJson(adaptable))
@@ -225,12 +231,13 @@ public final class NormalizedMessageMapperTest {
         final ThingId thingId = ThingId.of("thing:feature-modified");
         final ThingEvent<?> event =
                 FeaturePropertyModified.of(thingId, "my-feature", JsonPointer.of("abc"), JsonValue.of(false), 2L,
-                        Instant.ofEpochSecond(1L), DittoHeaders.empty());
+                        Instant.ofEpochSecond(1L), DittoHeaders.empty(), null);
 
+        final Map<String, JsonValue> options = Map.of(NormalizedMessageMapper.FIELDS, JsonValue.of(
+                "thingId,policyId,attributes/foo,features,_modified,_revision"));
         underTest.configure(DefaultMappingConfig.of(ConfigFactory.load("mapping-test")),
                 DefaultMessageMapperConfiguration.of("normalizer",
-                        Collections.singletonMap(NormalizedMessageMapper.FIELDS,
-                                "thingId,policyId,attributes/foo,features,_modified,_revision")));
+                        options, Map.of(), Map.of()));
 
         final Thing thing = ThingsModelFactory.newThingBuilder()
                 .setId(thingId)
@@ -263,9 +270,9 @@ public final class NormalizedMessageMapperTest {
     @Test
     public void deletedEventsAreNotMapped() {
         assertNotMapped(AttributeDeleted.of(ThingId.of("thing:id"), JsonPointer.of("/the/quick/brown/fox/"), 3L,
-                Instant.ofEpochSecond(3L), DittoHeaders.empty()));
+                Instant.ofEpochSecond(3L), DittoHeaders.empty(), null));
         assertNotMapped(FeaturePropertyDeleted.of(ThingId.of("thing:id"), "featureId",
-                JsonPointer.of("jumps/over/the/lazy/dog"), 4L, Instant.ofEpochSecond(4L), DittoHeaders.empty()));
+                JsonPointer.of("jumps/over/the/lazy/dog"), 4L, Instant.ofEpochSecond(4L), DittoHeaders.empty(), null));
         assertNotMapped(FeatureDeleted.of(ThingId.of("thing:id"), "featureId", 5L, DittoHeaders.empty()));
         assertNotMapped(ThingDeleted.of(ThingId.of("thing:id"), 6L, DittoHeaders.empty()));
     }
